--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-.inner, .date, .day {
-  fill: grey;
-  fill-opacity: 0.8;
-}
-
 .digits, .colons, .date-text, .day-text {
   fill: #fff;
   fill-opacity: 0.7;
@@ -13,6 +8,16 @@
   box-shadow: 0 0 1px rgba(0, 0, 139, 0.25);
   color: #fff;
   border-radius: 2px;
+}
+
+.inner, .date, .day {
+  fill: grey;
+  fill-opacity: 0.8;
+}
+
+.start, .stop, .clear {
+  fill: darkblue;
+  fill-opacity: 0.8;
 }
 
 /*# sourceMappingURL=style.css.map */
