--- a/style.scss
+++ b/style.scss
@@ -1,28 +1,35 @@
 @mixin text() {
-    fill: #fff;
-    fill-opacity: 0.7;
+  fill: #fff;
+  fill-opacity: 0.7;
 }
-@mixin containers($colour:grey) {
-    fill: $colour;
-    fill-opacity: 0.7;
+@mixin containers($colour: grey) {
+  fill: $colour;
+  fill-opacity: 0.7;
 }
-@mixin button($theme:darkblue) {
-    background: $theme;
-    box-shadow: 0 0 1px rgba($theme, .25);
-    color: #fff;
-    border-radius: 2px;
+@mixin button($theme: darkblue) {
+  background: $theme;
+  box-shadow: 0 0 1px rgba($theme, 0.25);
+  color: #fff;
+  border-radius: 2px;
 }
 
-.digits, .colons, .date-text, .day-text {
-    @include text;
+.digits,
+.colons,
+.date-text,
+.day-text {
+  @include text;
 }
 #buttontest {
-    @include button;
+  @include button;
 }
-.inner, .date, .day {
-    @include containers;
+.inner,
+.date,
+.day {
+  @include containers;
 }
-.start, .stop, .clear {
-    @include containers(darkblue);
-    fill-opacity: 0.5;
+.start,
+.stop,
+.clear {
+  @include containers(darkblue);
+  fill-opacity: 0.5;
 }
